<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/info_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:maxLines="4"/>

    <Button
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/info_display"
        android:text="@string/start"
        android:enabled="true"/>

    <Button
        android:id="@+id/play_A"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start"
        android:text="@string/play_A"
        android:enabled="false" />

    <Button
        android:id="@+id/play_B"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/play_A"
        android:text="@string/play_B"
        android:enabled="false"/>
    <Button
        android:id="@+id/rating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/play_B"
        android:text="@string/rating"
        android:enabled="false"/>

    <Button
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rating"
        android:text="@string/next"
        android:enabled="false"/>

    <Button
        android:id="@+id/sign_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/next"
        android:text="SIGN OUT"
        android:enabled="false"/>

    <Button
        android:id="@+id/finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_out"
        android:text="@string/finish"
        android:enabled="false" />

    <Button
        android:id="@+id/admin_only"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/finish"
        android:text="@string/admin_only"
        android:enabled="true"/>

</RelativeLayout>
